--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-sans">
+  <!-- Popup Modal for Maintenance -->
+<div id="maintenance-modal" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex justify-center items-center z-50 hidden">
+  <div class="bg-gray-900 text-white p-8 rounded-lg shadow-lg w-11/12 md:w-1/3 text-center">
+      <h3 class="text-2xl font-semibold mb-4">🚧 Maintenance Alert 🚧</h3>
+      <p class="text-lg mb-4">Our real-time Speech-to-Text feature is currently under maintenance. Please try again later.</p>
+      <button id="close-modal" class="bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded-lg">
+          Close
+      </button>
+  </div>
+</div>
+
     <header class="bg-gray-800 shadow-md">
         <div class="container mx-auto px-4 py-6 flex justify-between items-center">
             <h1 class="text-2xl font-bold text-FFF0DC">AudioScribe</h1>
@@ -241,6 +252,15 @@
         document.getElementById('menu-toggle').addEventListener('click', () => {
             document.getElementById('mobile-menu').classList.toggle('hidden');
         });
+         // Show the modal on page load
+         window.onload = function() {
+          document.getElementById('maintenance-modal').classList.remove('hidden');
+      };
+
+      // Close the modal when clicking the "Close" button
+      document.getElementById('close-modal').addEventListener('click', function() {
+          document.getElementById('maintenance-modal').classList.add('hidden');
+      });
     
         // File upload handling
         document.getElementById('file-upload').addEventListener('change', function (e) {
